feat: add user first & last name
Добавил поля в таблицу БД.
