# app/Http/Controllers/Api/V1/AuthController.php
@@ -20,7 +20,8 @@ class AuthController extends Controller
     {
 
         $user = User::query()->create([
-            'name' => $data['name'],
+            'first_name' => $data['first_name'],
+            'last_name' => $data['last_name'],
             'email' => $data['email'],
             'password' => bcrypt($data['password'])
         ]);
